返回数据格式变化，增加了错误返回码和错误返回信息