@@ -1,5 +1,6 @@
 package com.github.herdeny.service.impl;
 
+import com.github.herdeny.pojo.Result;
 import com.github.herdeny.service.ADGRN_Service;
 import com.github.herdeny.utils.SseClient;
 import org.json.JSONObject;
@@ -12,6 +13,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 
 @Service
@@ -24,7 +27,7 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
     String DATA_PATH;
 
     @Value("${PYTHON_PATH}")
-    String pythonPath;
+    String PYTHON_PATH;
 
     @Value("${PYSCENIC_PATH}")
     String pyScenicPath;
@@ -32,20 +35,14 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
     @Value("${CREATE_LOOM_PATH}")
     String CREATE_LOOM_PATH;
 
-    @Value("${CREATE_IMG_PATH}")
-    String CREATE_IMG_PATH;
+    @Value("${CREATE_TSV_PATH}")
+    String CREATE_TSV_PATH;
 
     @Value("${CREATE_ADGRN_COMPLEX_PATH}")
     String CREATE_ADGRN_COMPLEX_PATH;
 
-    @Value("${hg38}")
-    String hg38_PATH;
-
     @Value("${hs_hgnc_tfs}")
     String hs_hgnc_tfs_PATH;
-
-    @Value("${motifs_PATH}")
-    String motifs_PATH;
 
     @Autowired
     private SseClient sseClient;
@@ -56,11 +53,10 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
         System.out.println("Start Generate Loom...");
         sseClient.sendMessage(uid, uid + "-start-create-loom", "Start Generate Loom...");
 
-
-        String[] args1 = new String[]{pythonPath, CREATE_LOOM_PATH, filePath};
+        String[] args = new String[]{PYTHON_PATH, CREATE_LOOM_PATH, filePath};
 
         try {
-            Process process = Runtime.getRuntime().exec(args1);
+            Process process = Runtime.getRuntime().exec(args);
 
             BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
             BufferedReader err = new BufferedReader(new InputStreamReader(process.getErrorStream(), StandardCharsets.UTF_8));
@@ -88,51 +84,64 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
         return flag;
     }
 
-    public int adgrn_createTSV(String filePath, String uid) {
+    public JSONObject adgrn_createTSV(String filePath, String uid) {
+        boolean flag = true;
+        JSONObject result = new JSONObject();
         System.out.println("Start Generate TSV...");
         sseClient.sendMessage(uid, uid + "-start-create-tsv", "Start Generate TSV...");
 
+
+        String[] args = new String[]{
+                pyScenicPath, "grn",
+                "--num_workers", "5",
+                "--output", DATA_PATH + "adj.tsv",
+                "--method", "grnboost2",
+                filePath, hs_hgnc_tfs_PATH
+        };
+
         try {
-            // Build the command
-            ProcessBuilder processBuilder = new ProcessBuilder(
-                    pyScenicPath, "grn",
-                    "--num_workers", "5",
-                    "--output", "adj.tsv",
-                    "--method", "grnboost2",
-                    filePath, hs_hgnc_tfs_PATH
-            );
+            Process process = Runtime.getRuntime().exec(args);
 
-            processBuilder.redirectErrorStream(true);
-
-            // Start the process
-            Process process = processBuilder.start();
+            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
+            BufferedReader err = new BufferedReader(new InputStreamReader(process.getErrorStream(), StandardCharsets.UTF_8));
 
             // Read the output
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line;
-            while ((line = reader.readLine()) != null) {
-                System.out.println(line);
-                if (!line.toLowerCase().contains("warn") && !line.toLowerCase().contains("error")) {
-                    String messageID = uid + "-" + UUID.randomUUID();
-                    sseClient.sendMessage(uid, messageID, line);
+            String actionStr;
+            while ((actionStr = in.readLine()) != null) {
+                System.out.println(actionStr);
+                String messageID = uid + "-" + UUID.randomUUID();
+                sseClient.sendMessage(uid, messageID, actionStr);
+            }
+
+            String errorStr;
+            while ((errorStr = err.readLine()) != null) {
+                if (errorStr.contains("error:")) {
+                    if (flag) flag = false;
+                    String regex = "\\[Errno (\\d+)]";
+                    Pattern pattern = Pattern.compile(regex);
+                    Matcher matcher = pattern.matcher(errorStr);
+                    if (matcher.find()) {
+                        result.put("Error code", matcher.group(1));
+                    }
+                    result.put("Error Message", errorStr.substring(errorStr.indexOf("error:") + 7));
                 }
+                System.err.println(errorStr);
             }
 
-            // Wait for the process to finish
-            int exitCode = process.waitFor();
-            System.out.println("Exited with code: " + exitCode);
-
-            if (exitCode != 0) {
-                System.out.println("Failed to generate TSV");
-                return exitCode;
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
+            in.close();
+            err.close();
+            process.waitFor();
+        } catch (IOException | InterruptedException e) {
+            throw new RuntimeException(e);
         }
-        System.out.println("Complete Generate TSV");
-        sseClient.sendMessage(uid,uid + "-end-create-tsv","Complete Generate TSV");
-        return 0;
+
+        result.put("success", flag);
+        if (flag) {
+            System.out.println("Complete Generate TSV");
+            sseClient.sendMessage(uid, uid + "-end-create-tsv", "Complete Generate TSV");
+            result.put("code", 0);
+        }
+        return result;
     }
 
     @Override
@@ -142,7 +151,7 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
         System.out.println("Start Generate Image...");
         sseClient.sendMessage(uid, uid + "-start-adgrn", "Start Generate Image...");
 
-        String[] args1 = new String[]{pythonPath, CREATE_ADGRN_COMPLEX_PATH, MODEL_PATH, DATA_PATH, filePath};
+        String[] args1 = new String[]{PYTHON_PATH, CREATE_ADGRN_COMPLEX_PATH, MODEL_PATH, DATA_PATH, filePath};
 
         try {
             Process process = Runtime.getRuntime().exec(args1);
@@ -153,13 +162,13 @@ public class ADGRN_ServiceImpl implements ADGRN_Service {
             String actionStr;
             while ((actionStr = in.readLine()) != null) {
                 System.out.println(actionStr);
-                if (actionStr.startsWith("Number of nodes in the network graph:")){
+                if (actionStr.startsWith("Number of nodes in the network graph:")) {
                     result.put("网络图节点数量", actionStr.split(":")[1].trim());
                 }
-                if (actionStr.startsWith("Number of edges in the network graph:")){
+                if (actionStr.startsWith("Number of edges in the network graph:")) {
                     result.put("网络图边数量", actionStr.split(":")[1].trim());
                 }
-                if (actionStr.startsWith("Number of modules:")){
+                if (actionStr.startsWith("Number of modules:")) {
                     result.put("模块数量", actionStr.split(":")[1].trim());
                 }
                 String messageId = uid + "-" + UUID.randomUUID();
